safari z-index fix

--- a/docroot/discover/on-exhibit/vikings/css/screen.css
+++ b/docroot/discover/on-exhibit/vikings/css/screen.css
@@ -704,7 +704,7 @@ dd:after { display: block; clear: both; margin-bottom: 0.5em; width: 100%; conte
 .blurb--believers h3 strong { color: #255976; }
 
 /* line 17, ../../_sass/6-believers.scss */
-.aurora { background: url(../images/aurora.jpg) center bottom no-repeat; position: fixed; bottom: 0; width: 100%; height: 100%; z-index: -100; opacity: 1; background-size: cover; }
+.aurora { background: url(../images/aurora.jpg) center bottom no-repeat; position: fixed; bottom: 0; width: 100%; height: 100%; z-index: -100; opacity: 1; background-size: cover; -moz-transform: translate3D(0, 0, 0); -ms-transform: translate3D(0, 0, 0); -webkit-transform: translate3D(0, 0, 0); transform: translate3D(0, 0, 0); }
 
 /* line 1, ../../_sass/7-visit.scss */
 .slide--visit { min-height: 100vh; padding: 2em 2em 1em; box-sizing: border-box; overflow: visible; }
@@ -748,14 +748,14 @@ dd:after { display: block; clear: both; margin-bottom: 0.5em; width: 100%; conte
 /* line 59, ../../_sass/7-visit.scss */
 .button--red .button__leader { background: #000; }
 
-/* line 63, ../../_sass/7-visit.scss */
-.thorStone { margin: auto; position: relative; }
+/* line 62, ../../_sass/7-visit.scss */
+.thorStone { margin: auto; position: relative; z-index: -1; -moz-transform: translate3d(0, 0, 0); -ms-transform: translate3d(0, 0, 0); -webkit-transform: translate3d(0, 0, 0); transform: translate3d(0, 0, 0); }
 
-/* line 67, ../../_sass/7-visit.scss */
-.thorStone .stone, .thorStone .magic { position: absolute; z-index: -1; width: auto; }
+/* line 68, ../../_sass/7-visit.scss */
+.thorStone .stone, .thorStone .magic { position: absolute; z-index: 0; width: auto; }
 
-/* line 73, ../../_sass/7-visit.scss */
+/* line 74, ../../_sass/7-visit.scss */
 .thorStone .stone { bottom: 0; height: 1400px; left: calc(50% - 319px); }
 
-/* line 78, ../../_sass/7-visit.scss */
+/* line 79, ../../_sass/7-visit.scss */
 .thorStone .magic { bottom: 992px; height: 572px; left: calc(50% - 342px); }
